[package]
name = "charsloc"
version = "0.1.0"
authors = ["Łukasz Hanuszczak <lukasz.hanuszczak@gmail.com>"]
categories = ["text-processing"]
keywords = ["char", "iterator"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrhania/charsloc"
description = """
A library that enriches character iterators with location information.
"""

[dependencies]
